--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
-    defaultConfig {
+    compileSdkVersion 28
+  defaultConfig {
         applicationId "com.hqyxjy.ldf.supercalendar"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 2
         versionName "2.0"
     }
@@ -20,9 +19,7 @@ android {
     lintOptions {
         abortOnError false
     }
-    dexOptions {
-        incremental true
-    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -30,11 +27,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    testCompile 'junit:junit:4.12'
-    compile project(path: ':calendar')
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation "androidx.recyclerview:recyclerview:1.1.0"
+  implementation 'com.google.android.material:material:1.0.0'
+  implementation project(path: ':calendar')
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
 }
